Challenges/Challenge10/template-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.kubernetes.io/azure-dns-label-name: jonathanvella
  name: content-web-v2
  labels:
    app: content-web-v2
spec:
  type: LoadBalancer
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
  selector:
    app: content-web-v2
---
apiVersion: v1
kind: Service
metadata:
  name: content-api-v2
  labels:
    app: content-api-v2
spec:
  type: ClusterIP
  ports:
  - port: 3001
    targetPort: 3001
    protocol: TCP
  selector:
    app: content-api-v2
